# tinympl

./: CMakeLists.txt
cmake/: TinyMPLConfig.cmake.in
